--- a/PWA/src/css/nav.css
+++ b/PWA/src/css/nav.css
@@ -32,10 +32,10 @@ nav button svg {
     height: 100%;
 }
 
-nav #home-btn svg {
+nav #nav-home-btn svg {
     width: 80%;
 }
 
-nav #back-btn svg {
+nav #nav-back-btn svg {
     width: 70%;
 }
