--- a/PWA/src/css/container.css
+++ b/PWA/src/css/container.css
@@ -1,15 +1,4 @@
 .container-fluid {
     overflow-y: scroll;
-    padding: 10vw;
-}
-
-.container-fluid .row {
-    height: 100%;
-}
-
-.container-fluid .btn {
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    cursor: pointer;
+    padding: 20px;
 }
