--- a/PWA/src/css/nav.css
+++ b/PWA/src/css/nav.css
@@ -25,17 +25,19 @@ nav button {
     height: 5vh;
     width: 5vh;
     border-radius: 5vh;
+    padding: 0;
+    margin: 0;
 }
 
 nav button svg {
     fill: currentColor;
-    height: 100%;
+    height: 60%;
+    width: 60%;
+    padding: 0;
+    margin: 0;
 }
 
-nav #nav-home-btn svg {
-    width: 80%;
-}
-
-nav #nav-back-btn svg {
-    width: 70%;
+#nav-back-btn svg {
+    position: relative;
+    top: 1px;
 }
