--- a/PWA/src/css/list-page.css
+++ b/PWA/src/css/list-page.css
@@ -68,6 +68,7 @@
     padding-top: 0.2em;
     padding-bottom: 0.2em;
     max-width: 17em;
+    border: 0.1em solid #6A3D57;
 }
 
 .item-map svg {
@@ -79,4 +80,10 @@
 #all-items-map {
     padding: 1em 0;
     border-radius: 2em;
+    background: #7C0D82 no-repeat center;
+    background-size: contain;
+    width: 80vw;
+    height: 17.6vw;
+    margin: auto;
+    border: 0.5vw solid #6A3D57;
 }
