Some changes to control the origin of the PWA
- Some changes to the BASE_URL and how it is used
- Links opening in new tab now
- Fixed bug that caused user position to fail
- The text in the nav should be better positioned now?

--- a/PWA/src/css/nav.css
+++ b/PWA/src/css/nav.css
@@ -18,8 +18,8 @@ nav #nav-title {
     text-transform: uppercase;
     margin: 0;
     font-size: 3vmax;
-    top: 0.3em;
     position: relative;
+    top: calc(50% - 1.5vmax);
 }
 
 nav button {
@@ -33,6 +33,7 @@ nav button {
     border-radius: 5vh;
     padding: 0;
     margin: 0;
+    cursor: pointer;
 }
 
 nav .nav-home-col {
