Installing to home screen
The pwa can be installed to the home screen now :)

--- a/PWA/src/css/grid-page.css
+++ b/PWA/src/css/grid-page.css
@@ -9,7 +9,7 @@
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
-    min-height: 16vh;
+    min-height: 16vmax;
     -webkit-transition: width 500ms, height 500ms; /* Safari */
     transition: width 500ms, height 500ms;
 }
