--- a/PWA/src/css/map-page.css
+++ b/PWA/src/css/map-page.css
@@ -5,14 +5,14 @@
 }
 .map-instructions {
     width: 100%;
-    height: 50vh;
+    max-height: 50vh;
     position: absolute;
-    top: 100vh;
+    bottom: -50vh;
     background-color: white;
     border-top: 3px solid dodgerblue;
     z-index: 20;
     overflow-y: scroll;
-    transition: top 1s ease 0s;
+    transition: bottom 1s ease 0s, height 1s ease 0s;
 }
 
 b.marker-title {
