--- a/PWA/src/css/map-page.css
+++ b/PWA/src/css/map-page.css
@@ -15,6 +15,48 @@
     transition: bottom 1s ease 0s, height 1s ease 0s;
 }
 
+@keyframes error-twinkle {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+.map-geolocation-error {
+    display: none;
+}
+
+.map-geolocation-error.show {
+    display: block;
+    position: fixed;
+    z-index: 99;
+    width: 4em;
+    height: 4em;
+    background-color: rgba(0,0,0,0.7);
+    border-radius: 0.5em;
+    top: 100%;
+    left: 0;
+    padding: 0.5em;
+    margin-left: 0.5em;
+    margin-top: -7em;
+    /*Animation*/
+    animation: error-twinkle 2s ease 0s infinite alternate;
+}
+
+.map-geolocation-error .fa-map-marker-alt {
+    width: 2em;
+    height: 2em;
+    position: absolute;
+    color: white;
+    top: 1em;
+    left: 1em;
+}
+
+.map-geolocation-error .fa-ban {
+    position: absolute;
+    width: 3em;
+    height: 3em;
+    color: red;
+}
+
 b.marker-title {
     display: block;
     text-align: center;
