--- a/PWA/src/css/emergency-page.css
+++ b/PWA/src/css/emergency-page.css
@@ -6,10 +6,10 @@ a.emergency-btn {
     width: 100%;
     max-height: 30vw;
     color: #fff;
-    text-decoration: none;
     text-align: center;
     outline: none;
     -webkit-tap-highlight-color: transparent;
+    box-shadow: 0.2em 0.2em 0.2em 0 rgba(0,0,0,.3);
 }
 
 a.emergency-btn:active {
