--- a/PWA/src/css/app.css
+++ b/PWA/src/css/app.css
@@ -6,6 +6,31 @@ html {
     width: 100%;
 }
 
+button {
+    display: block;
+    cursor: pointer;
+    outline: none;
+    -webkit-tap-highlight-color: transparent;
+    padding: 0;
+    margin: 0;
+    background: none;
+    border: none;
+    box-shadow: 0.2em 0.2em 0.2em 0 rgba(0,0,0,.3);
+}
+
+button svg {
+    display: block;
+    margin: auto;
+}
+
+button:active {
+    filter: brightness(0.8);
+}
+
+a {
+    text-decoration: none;
+}
+
 body {
     margin: 0;
     overflow: hidden;
