--- a/PWA/src/css/grid-page.css
+++ b/PWA/src/css/grid-page.css
@@ -8,14 +8,8 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    cursor: pointer;
     min-height: 16vmax;
     -webkit-transition: width 500ms, height 500ms; /* Safari */
     transition: width 500ms, height 500ms;
-    outline: none;
-    -webkit-tap-highlight-color: transparent;
-}
-
-.grid-page-main .btn:active {
-    filter: brightness(0.8);
+    box-shadow: none;
 }
