More margin on marker buttons

--- a/PWA/src/css/map-page.css
+++ b/PWA/src/css/map-page.css
@@ -187,6 +187,7 @@ b.marker-title {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 1em;
 }
 
 .route-btn {
