Trying to solve too-wide driving directions

--- a/PWA/src/css/map-page.css
+++ b/PWA/src/css/map-page.css
@@ -215,3 +215,6 @@ b.marker-title {
 .adp table {
     width: 100%;
 }
+td.adp-substep:nth-child(3) {
+    word-break: break-word; /* If not, driving directions are too wide sometimes */
+}
