--- a/PWA/src/panelCss/login.css
+++ b/PWA/src/panelCss/login.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
 }
 
-body {
+main.login {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
@@ -11,6 +11,8 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #f5f5f5;
+  width: 100%;
+  height: 100%;
 }
 
 button.btn-primary,button.btn-primary:not(:disabled):not(.disabled):active{
