--- a/PWA/src/panelCss/login.css
+++ b/PWA/src/panelCss/login.css
@@ -1,18 +1,34 @@
 html,
 body {
-  height: 100%;
+    height: 100%;
+}
+
+body {
+    background-color: #eeeeee;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 main.login {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
-  width: 100%;
-  height: 100%;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    background-color: #f5f5f5;
+    width: 100%;
+    height: 100%;
+}
+
+main.panel {
+    display: none;
+    height: 100%;
+}
+
+main.panel>.row:nth-child(1) {
+    height: 5%;
+}
+main.panel>.row:nth-child(2) {
+    height: 95%;
 }
 
 button.btn-primary,button.btn-primary:not(:disabled):not(.disabled):active{
