--- a/PWA/src/panelCss/login.css
+++ b/PWA/src/panelCss/login.css
@@ -1,15 +1,16 @@
 html,
 body {
     height: 100%;
+    overflow-y: hidden;
 }
 
 body {
     background-color: #eeeeee;
-    padding-top: 40px;
-    padding-bottom: 40px;
 }
 
 main.login {
+    padding-top: 40px;
+    padding-bottom: 40px;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-align: center;
@@ -17,18 +18,6 @@ main.login {
     background-color: #f5f5f5;
     width: 100%;
     height: 100%;
-}
-
-main.panel {
-    display: none;
-    height: 100%;
-}
-
-main.panel>.row:nth-child(1) {
-    height: 5%;
-}
-main.panel>.row:nth-child(2) {
-    height: 95%;
 }
 
 button.btn-primary,button.btn-primary:not(:disabled):not(.disabled):active{
