Edit item + category info
Now items can be edited in the panel
Now the panel displays information about the chosen category (code, name and link)

--- a/PWA/src/panelCss/panel.css
+++ b/PWA/src/panelCss/panel.css
@@ -115,6 +115,10 @@ main.panel #items .move-item {
     border-bottom-right-radius: 0;
 }
 
+main.panel #items .item-name {
+    max-width: calc(100% - 7rem);
+}
+
 main.panel #items li.edited {
     border: 2px solid #7C0D82 !important;
     border-radius: 0.25rem;
