--- a/PWA/src/css/container.css
+++ b/PWA/src/css/container.css
@@ -1,4 +1,16 @@
 .container-fluid {
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 20px;
+}
+
+@media (min-width:992px){
+    .container-fluid {
+        width: 70vw;
+    }
+}
+
+@media (min-width:1200px){
+    .container-fluid {
+        width: 50vw;
+    }
 }
