Deleted centering on big screens
Now the page is not centered on big screens and occupies the whole witdth

--- a/PWA/src/css/container.css
+++ b/PWA/src/css/container.css
@@ -3,6 +3,7 @@
     padding: 20px;
 }
 
+/*
 @media (min-width:992px){
     .container-fluid {
         width: 70vw;
@@ -13,4 +14,4 @@
     .container-fluid {
         width: 50vw;
     }
-}
+}*/
