--- a/PWA/src/panelCss/panel.css
+++ b/PWA/src/panelCss/panel.css
@@ -2,7 +2,7 @@ main.panel {
     display: none;
     height: 100%;
     padding: 0;
-    min-width: 600px;
+    min-width: 40rem;
 }
 
 main.panel #errorDisplay {
