--- a/PWA/src/css/list-page.css
+++ b/PWA/src/css/list-page.css
@@ -70,7 +70,7 @@ a.item-call {
     text-transform: uppercase;
     background-color: #7C0D82;
     font-weight: bold;
-    margin: 0.5em;
+    margin: 0.5em 0;
 }
 
 .item-map {
